<resources>
    <string name="app_name">Agri.fy</string>
    <string name="title_home">Home</string>
    <string name="title_reports">Reports</string>
    <string name="title_fields">Fields</string>
    <string name="title_employees">Employees</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>">
    <string name="welcome">Welcome, </string>
    <string name="user">User </string>

    <string name="ov">Overview</string>

    <string name="login">Login</string>
    <string name="sign_up">Signup</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="f_stat">Field Status</string>
    <string name="f_date">Date Planted</string>
    <string name="f_stabi">Soil Stability</string>
    <string name="f_stage">Field Stage</string>

    <string name="h_stat">Harvest Projections</string>
    <string name="i_stat">Insights</string>

    <string name="field_report">Field Report</string>

    <string name="harvest_fr">Harvest Finance Report</string>
    <string name="available_fields">Available Fields</string>

    <string name="f_one">Field 1</string>
    <string name="f_two">Field 2</string>
    <string name="f_three">Field 3</string>
    <string name="f_four">Field 4</string>

    <string name="free_one">Free 1</string>
    <string name="free_two">Free 2</string>

    <string name="field_handlers">Field Foremen</string>

    <string name="app_logo">App Logo</string>
</resources>