<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.agrify.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.app.agrify.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_fields"
        android:name="com.app.agrify.FieldsFragment"
        android:label="@string/title_fields"
        tools:layout="@layout/fragment_fields" />

    <fragment
        android:id="@+id/navigation_employees"
        android:name="com.app.agrify.EmployeesFragment"
        android:label="@string/title_employees"
        tools:layout="@layout/fragment_fields" />
</navigation>