<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/background_white"> <!-- Set a background color -->

    <!-- App Logo -->

    <!-- Add bottom margin for spacing -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop=""
        android:text="Welcome Back!"
        android:fontFamily="@font/redditsans"
        android:textColor="@color/background_color"
        android:layout_gravity="center"
        android:textSize="32sp"
        android:textFontWeight="800"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/righteous"
        android:text="@string/app_name"
        android:textColor="@color/primary_color"
        android:textSize="64sp"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minHeight="56dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
    android:layout_marginBottom="16dp" /> <!-- Add bottom margin for spacing -->

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="56dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="24dp" /> <!-- Add bottom margin for spacing -->

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/redditsans"
        android:text="@string/login"
        android:minHeight="56dp"
        android:textSize="18sp"
        
        android:backgroundTint="@color/background_color"

    android:textColor="@color/white"
    android:padding="12dp"
    android:layout_marginBottom="16dp"/> <!-- Add bottom margin for spacing -->

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register Now"
        android:textColor="@color/background_color"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>
